--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <audio id="audio" autoplay loop>
-        <source src="assets/chano.mp3" type="audio/mpeg">
+        <source src="chano.mp3" type="audio/mpeg">
         Tu navegador no soporta el audio.
     </audio>
     <div class="container">
